Details
-
Bug
-
Resolution: Fixed
-
Minor
Description
I have replaced Windows Explorer with explorer_new and restarted Windows. Then I noted that Shell Hook Messages are not processed. Later I found http://stackoverflow.com/questions/4544468/why-my-wndproc-doesnt-receive-shell-hook-messages-if-the-app-is-set-as-default which says:
"Note that custom shell applications do not receive WH_SHELL messages. Therefore, any application that registers itself as the default shell must call the SystemParametersInfo function before it (or any other application) can receive WH_SHELL messages. This function must be called with SPI_SETMINIMIZEDMETRICS and a MINIMIZEDMETRICS structure. Set the iArrange member of this structure to ARW_HIDE."
Then I remembered Andrew Green had it fixed.