[EXPLORER_NEW] - Hide minimized window captions (and enable shell notifications, thus fixing taskbar buttons). This should have been in r57978, but got lost. - From Andrew Green's GSoC branch. Spotted by Edijus. CORE-6899 #resolve

svn path=/trunk/; revision=58186